# woodard-module-helpers

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
tests/: test_db.py  test_identity.py  test_integration.py  test_migrations.py  test_public_api.py  test_settings.py  test_testing.py  test_urls.py
tests/cli/: test_cli_scaffold.py  test_clone_module.py  test_convert_to_platform.py  test_create_module.py  test_domains.py  test_json_output.py  test_push_dev.py  test_request_prod.py  test_shell.py
woodard_module_helpers/: __init__.py  db.py  identity.py  migrations.py  settings.py  testing.py  urls.py
woodard_module_helpers/cli/: __init__.py  _domains.py  _output.py  _shell.py  clone_module.py  convert_to_platform.py  create_module.py  push_dev.py  request_prod.py
