[project]
name = "woodard-module-helpers"
version = "0.2.0"
description = "Shared helpers + CLI for Woodard Intelligence Platform modules"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "typer>=0.15",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
woodard-cli = "woodard_module_helpers.cli:main"

[project.entry-points.pytest11]
woodard_module_helpers = "woodard_module_helpers.testing"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["woodard_module_helpers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
