[project]
name = "woodard-module-helpers"
version = "1.4.0"
description = "Shared library for Woodard Intelligence Platform modules (auth, settings, db, testing fixtures)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Write-back to a SQL Server warehouse via managed identity (see data-storage-patterns).
mssql = [
    "pyodbc>=5.1",
    "azure-identity>=1.19",
    "alembic>=1.13",
]
# Write-back / Alembic migrations against Azure Database for PostgreSQL via
# managed identity (see the geology stack).
postgres = [
    "psycopg[binary]>=3.1",
    "azure-identity>=1.19",
    "alembic>=1.13",
]

[project.entry-points.pytest11]
woodard_module_helpers = "woodard_module_helpers.testing"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "alembic>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["woodard_module_helpers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
